# traceharbor

./: .gitignore  COPYRIGHT  NOTICE  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
cmake/: TraceHarbor16KBPageSize.cmake
docs/: maven-publish.md  version-catalog.md
docs/plans/: 2026-04-23-agp8-upgrade-tracking.md  (+1 more)
gradle/: Arguments.gradle.kts  TraceHarborNativeDepend.gradle  WeChatDebugStub2.gradle  WeChatPublish.gradle  android-publish-private.gradle  android-publish.gradle  bintray-to-maven-central.gradle  build_library.gradle  check.gradle  check.gradle.kts  java-publish-private.gradle  java-publish.gradle  kotlin-jvm-target-alignment.gradle.kts  libs.versions.toml  maven-devlocal-publication.gradle  maven-devlocal-publication.gradle.kts  maven-publish.gradle  maven-publish.gradle.kts  private-properties.gradle  private-properties.gradle.kts  root-extra-properties.gradle.kts
tools/: rename-brand.sh
traceharbor-android-commons/: build.gradle  build.gradle.kts  gradle.properties
traceharbor-android-lib/: build.gradle  build.gradle.kts  gradle.properties
traceharbor-apk-canary/: build.gradle  build.gradle.kts  gradle.properties
traceharbor-arscutil/: build.gradle  build.gradle.kts  gradle.properties
traceharbor-backtrace/: CMakeLists.txt  build.gradle  build.gradle.kts  dependencies.gradle  gradle.properties
traceharbor-backtrace/cxx-static/: build.gradle  build.gradle.kts
traceharbor-backtrace/src/main/: AndroidManifest.xml
traceharbor-backtrace/src/main/cpp/common/: Log.h  PthreadExt.h  Utils.h
traceharbor-backtrace/src/main/cpp/libtraceharbor-backtrace/: QuickenJNI.cpp  QuickenUnwinder.cpp
traceharbor-backtrace/src/main/cpp/libwechatbacktrace/: QuickenJNI.cpp
traceharbor-backtrace/src/main/java/com/kernelflux/traceharbor/backtrace/: ProcessUtil.java  ProcessUtil.kt  TraceHarborBacktrace.java  TraceHarborBacktrace.kt  TraceHarborBacktraceNative.java  TraceHarborBacktraceNative.kt  WarmUpDelegate.java  WarmUpDelegate.kt  WarmUpInvoker.java  WarmUpInvoker.kt  WarmUpReporter.java  WarmUpReporter.kt  WarmUpScheduler.java  WarmUpScheduler.kt  WarmUpService.java  WarmUpService.kt  WarmUpUtility.java  WarmUpUtility.kt
traceharbor-backtrace/src/main/java/com/kernelflux/traceharbor/xlog/: XLogNative.java  XLogNative.kt
traceharbor-backtrace/src/main/java/io/traceharbor/backtrace/: ProcessUtil.java  WarmUpDelegate.java  WarmUpInvoker.java  WarmUpReporter.java  WarmUpScheduler.java  WarmUpService.java  WarmUpUtility.java  WeChatBacktrace.java  WeChatBacktraceNative.java
traceharbor-backtrace/src/main/java/io/traceharbor/xlog/: XLogNative.java
traceharbor-backtrace/src/test/java/com/kernelflux/backtrace/: ExampleUnitTest.java
traceharbor-battery-canary/: build.gradle  build.gradle.kts  gradle.properties
traceharbor-commons/: build.gradle  build.gradle.kts  gradle.properties
traceharbor-fd/: CMakeLists.txt  build.gradle  build.gradle.kts  gradle.properties
traceharbor-gradle-plugin/: build.gradle  build.gradle.kts  gradle.properties
traceharbor-hooks/: CMakeLists.txt  build.gradle  build.gradle.kts  dependencies.gradle  gradle.properties
traceharbor-hprof-analyzer/: CMakeLists.txt  README.md
traceharbor-hprof-analyzer/lib/: CMakeLists.txt
traceharbor-hprof-analyzer/lib/analyzer/: analyzer.cpp
traceharbor-hprof-analyzer/lib/analyzer/include/: analyzer.h
traceharbor-hprof-analyzer/lib/err/: errorha.cpp
traceharbor-hprof-analyzer/lib/err/include/: errorha.h
traceharbor-hprof-analyzer/lib/heap/: heap.cpp  primitive.cpp
traceharbor-hprof-analyzer/lib/heap/include/: heap.h
traceharbor-hprof-analyzer/lib/main/: analyzer.cpp  chain.cpp  heap.cpp
traceharbor-hprof-analyzer/lib/main/include/: traceharbor_hprof_analyzer.h
traceharbor-hprof-analyzer/lib/main/internal/: main_analyzer.h  main_chain.h  main_heap.h
traceharbor-hprof-analyzer/lib/parser/: engine.cpp  parser.cpp
traceharbor-hprof-analyzer/lib/parser/include/: parser.h
traceharbor-hprof-analyzer/lib/parser/internal/: engine.h
traceharbor-hprof-analyzer/lib/reader/: reader.cpp
traceharbor-hprof-analyzer/lib/reader/include/: reader.h
traceharbor-hprof-analyzer/test/main/: CMakeLists.txt  analyze.cpp  chain.cpp  heap.cpp
traceharbor-hprof-analyzer/test/reader/: CMakeLists.txt  reader.cpp
traceharbor-io-canary/: CMakeLists.txt  build.gradle  build.gradle.kts  gradle.properties  proguard-rules.pro
traceharbor-mallctl/: CMakeLists.txt  build.gradle  build.gradle.kts  gradle.properties
traceharbor-memguard/: CMakeLists.txt  build.gradle  build.gradle.kts  dependencies.gradle  gradle.properties
traceharbor-memory-canary/: build.gradle  build.gradle.kts  gradle.properties
traceharbor-opengl-leak/: CMakeLists.txt  build.gradle  build.gradle.kts  dependencies.gradle  gradle.properties  proguard-rules.pro
traceharbor-resource-canary/traceharbor-resource-canary-android/src/main/cpp/memory_util/: CMakeLists.txt  log.h  memory_util.cpp
traceharbor-resource-canary/traceharbor-resource-canary-android/src/main/cpp/memory_util/excludes/: excludes.h
traceharbor-resource-canary/traceharbor-resource-canary-android/src/main/cpp/memory_util/symbol/: symbol.cpp  symbol.h
traceharbor-resource-canary/traceharbor-resource-canary-android/src/main/cpp/memory_util/symbol/dlsym/: dlsym.h
traceharbor-sqlite-lint/: CMakeLists.txt  README.md
traceharbor-trace-canary/: CMakeLists.txt  build.gradle  build.gradle.kts  gradle.properties  proguard-rules.pro
traceharbor-traffic/: CMakeLists.txt  build.gradle  build.gradle.kts  gradle.properties
traceharbor-traffic/src/main/: AndroidManifest.xml
traceharbor-traffic/src/main/cpp/: TraceHarborTraffic.cc  TraceHarborTraffic.h  TrafficCollector.cc  TrafficCollector.h
traceharbor-traffic/src/main/cpp/util/: Logging.h  blocking_queue.h
traceharbor-traffic/src/main/java/com/kernelflux/traceharbor/traffic/: TrafficConfig.java  TrafficConfig.kt  TrafficPlugin.java  TrafficPlugin.kt
traceharbor-traffic/src/main/java/io/traceharbor/traffic/: TrafficConfig.java  TrafficPlugin.java
(+1475 files in other folders)
