cmake_minimum_required(VERSION 3.10.2)
project(traceharbor_hprof_analyzer)

set(CMAKE_CXX_STANDARD 17)

add_executable(traceharbor_hprof_analyzer_test analyze.cpp chain.cpp heap.cpp)
target_link_libraries(traceharbor_hprof_analyzer_test hprof_analyzer)
target_link_libraries(traceharbor_hprof_analyzer_test traceharbor_hprof_analyzer_heap traceharbor_hprof_analyzer_parser)
target_link_libraries(traceharbor_hprof_analyzer_test gtest_main)
target_link_libraries(traceharbor_hprof_analyzer_test test_tools)

gtest_discover_tests(traceharbor_hprof_analyzer_test)